test/negative/103_lowercase_variant.fx
// expect: capital
type bad_t = red | green | blue
